ECO-BLD: Some minor modifications to interface

--- a/skins/EpicBlue/formate.css
+++ b/skins/EpicBlue/formate.css
@@ -16,7 +16,7 @@
                                   ±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±
 */
 
-*
+body, form, table
 {
   font-family : Tahoma, sans-serif;
   font-size : 11px;
