MISC: Minor interface tuning

--- a/skins/EpicBlue/formate.css
+++ b/skins/EpicBlue/formate.css
@@ -16,7 +16,7 @@
                                   ±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±
 */
 
-body, form, table
+body, form, table, input, select
 {
   font-family : Tahoma, sans-serif;
   font-size : 11px;
