--- a/skins/xnova/formate.css
+++ b/skins/xnova/formate.css
@@ -263,3 +263,6 @@ div .ui-dialog-content table { background: #040e1e; }
 {
   border-top-color: #666666;  /*  Reserved for unit_preview border color*/
 }
+
+#off_dark_matter_hint {color: #00CCFF; font-weight: bold; floating: left}
+#off_get_dark_matter { color: #ff8900; font-weight: bold;}
