SYS: Changes in preparation to implement mercenaries-6 - unification of building interface-3. See docs/changelog.txt for more details

--- a/skins/EpicBlue/formate.css
+++ b/skins/EpicBlue/formate.css
@@ -258,6 +258,8 @@ div .ui-dialog-content table { background: #344055; }
   height: 60px;
   width: 60px;
 
+  margin-right: 2px;
+
   font-size: 100%;
 }
 
