--- a/design/css/global.css
+++ b/design/css/global.css
@@ -1,6 +1,6 @@
 body
 {
-  overflow-y:scroll;
+  overflow-y: scroll;
 }
 
 body, form
@@ -46,7 +46,7 @@ input.button
 ul /* Unmarked list */
 {
   margin: 0;
-  padding-left: 20;
+  padding-left: 20px;
   text-align: left;
 }
 
@@ -70,10 +70,6 @@ ul /* Unmarked list */
   background: rgb(0, 0, 0);
   /* RGBa with 0.75 opacity */
   background: rgba(0, 0, 0, 0.75);
-  /* For IE 5.5 - 7. 0.75*255 = 191.25 ~ 0xC0 */
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#C0000000, endColorstr=#C0000000);
-  /* For IE 8*/
-  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#C0000000, endColorstr=#C0000000)";
 }
 
 .alpha50
@@ -82,10 +78,6 @@ ul /* Unmarked list */
   background: rgb(0, 0, 0);
   /* RGBa with 0.50 opacity */
   background: rgba(0, 0, 0, 0.50);
-  /* For IE 5.5 - 7. 0.50*255 = 128 ~ 0x80 */
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#80000000, endColorstr=#80000000);
-  /* For IE 8*/
-  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#80000000, endColorstr=#80000000)";
 }
 
 .alpha25
@@ -94,10 +86,6 @@ ul /* Unmarked list */
   background: rgb(0, 0, 0);
   /* RGBa with 0.25 opacity */
   background: rgba(0, 0, 0, 0.25);
-  /* For IE 5.5 - 7. 0.25*255 = 64 ~ 0x40 */
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#40000000, endColorstr=#40000000);
-  /* For IE 8*/
-  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#40000000, endColorstr=#40000000)";
 }
 
 /* jQuery-UI */
@@ -135,7 +123,6 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
 .error
 {
   text-align: left;
-  font-color: red;
   color: red;
 }
 
