SYS: Rewrote vacation mode. Many changes in options page. See changelog.txt for details

--- a/skins/EpicBlue/formate.css
+++ b/skins/EpicBlue/formate.css
@@ -241,6 +241,12 @@ h1
   color: #993333;
 }
 
+.link {
+  text-decoration: underline;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 /* Setting popup table background color */
 div .ui-dialog-content table { background: #344055; }
 
