--- a/design/css/global.css
+++ b/design/css/global.css
@@ -63,6 +63,7 @@ ul /* Unmarked list */
 .icon-minus { background-position: -16px 0px; }
 .icon-info { background-position: -32px 0px; }
 .icon-cancel { background-position: -48px 0px; }
+.icon-gather { background-position: -64px 0px; }
 
 .icon_alpha, .alpha75 /* Partially transparent background for over-planet-image icons */
 {
