--- a/design/css/global.css
+++ b/design/css/global.css
@@ -16,6 +16,18 @@ input.button
   padding-bottom: 1px;
 }
 
+ul /* Unmarked list */
+{
+  margin: 0;
+  padding-left: 20px;
+  text-align: left;
+}
+
+li
+{
+  padding-top: 4px;
+}
+
 /* System classes */
 .fl /* Float left */
 {
@@ -25,6 +37,16 @@ input.button
 .fr /* Float right */
 {
   float: right;
+}
+
+.left /* Left align */
+{
+  text-align: left;
+}
+
+.right /* Right align */
+{
+  text-align: right;
 }
 
 .hide  /* Hide */
@@ -41,18 +63,6 @@ input.button
 .strong /* strong tag emulation */
 {
   font-weight: bold;
-}
-
-ul /* Unmarked list */
-{
-  margin: 0;
-  padding-left: 20px;
-  text-align: left;
-}
-
-li
-{
-  padding-top: 4px;
 }
 
 .icons
@@ -116,16 +126,6 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
   text-align: left;
 }
 
-#chat_box
-{
-  width: 100%;
-}
-
-#copyright
-{
-  text-align: center;
-}
-
 .error
 {
   text-align: left;
@@ -135,4 +135,14 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
 .noborder, .noborder tr, .noborder th
 {
   border: 0;
+}
+
+#chat_box
+{
+  width: 100%;
+}
+
+#copyright
+{
+  text-align: center;
 }
