--- a/skins/xnova/formate.css
+++ b/skins/xnova/formate.css
@@ -324,3 +324,8 @@ div .ui-dialog-content table { background: #040e1e; }
 
 #off_dark_matter_hint {color: #00CCFF; font-weight: bold; floating: left}
 #off_get_dark_matter { color: #ff8900; font-weight: bold;}
+
+.ui-widget-content
+{
+  color: white;
+}
