--- a/skins/EpicBlue/formate.css
+++ b/skins/EpicBlue/formate.css
@@ -51,6 +51,8 @@ th, td, input, select, textarea
 {
   border               : 1px #415680 solid;
   background-color     : #344566;
+  padding-left         : 3px;
+  padding-right        : 3px;
 }
 
 input, select, textarea, div.z
@@ -66,29 +68,29 @@ textarea
 th, th.c_l, th.c_r, th.c_c
 {
   text-align           : center;
-  padding-left         : 3px;
-  padding-right        : 3px;
+/*  padding-left         : 3px;
+  padding-right        : 3px;*/
 }
 
 td.c, td.c_l, td.c_r, td.c_c
 {
   font-weight          : bold;
-  padding-left         : 3px;
-  padding-right        : 3px;
+/*  padding-left         : 3px;
+  padding-right        : 3px;*/
   background-image     : url(img/bg1.gif);
 }
 
-th.c_c, td.c_c
+th.c_c, td.c_c, .cell_center
 {
   text-align: center;
 }
 
-th.c_l, td.c_l, td.c
+th.c_l, td.c_l, td.c, .cell_left
 {
   text-align: left;
 }
 
-th.c_r, td.c_r
+th.c_r, td.c_r, .cell_right
 {
   text-align: right;
 }
