--- a/skins/xnova/formate.css
+++ b/skins/xnova/formate.css
@@ -56,32 +56,28 @@ th
   text-align   : center;
 }
 
-th, th.c_l, th.c_r, th.c_c
-{
-  text-align           : center;
-  padding-left         : 3px;
-  padding-right        : 3px;
-}
-
-td.c, td.c_l, td.c_r, td.c_c
+td.c, th.c_l, th.c_r, th.c_c, tr.c_l th, tr.c_r th, tr.c_c th
 {
   font-weight          : bold;
-  padding-left         : 3px;
-  padding-right        : 3px;
   background-image     : url(img/bg1.gif);
 }
 
-th.c_c, td.c_c, .cell_center
+th, td.c_l, td.c_r, td.c_c, tr.c_l td, tr.c_r td, tr.c_c td
+{
+  text-align           : center;
+}
+
+th.c_c, td.c_c, .cell_center, tr.c_c td, tr.c_c th, tr.cell_center td, tr.cell_center th
 {
   text-align: center;
 }
 
-th.c_l, td.c_l, td.c, .cell_left
+th.c_l, td.c_l, td.c, .cell_left, tr.c_l td, tr.c_l th, tr.cell_left td, tr.cell_left th
 {
   text-align: left;
 }
 
-th.c_r, td.c_r, .cell_right
+th.c_r, td.c_r, .cell_right, tr.c_r td, tr.c_r th, tr.cell_right td, tr.cell_right th
 {
   text-align: right;
 }
