feat-INT-29d15: Planet overview and hangar ques now looks identical to building que

--- a/skins/EpicBlue/formate.css
+++ b/skins/EpicBlue/formate.css
@@ -284,6 +284,7 @@ div .ui-dialog-content table { background: #344055; }
   width: 60px;
 
   margin-right: 2px;
+  margin-bottom: 2px;
 
   font-size: 100%;
 }
