--- a/skins/xnova/formate.css
+++ b/skins/xnova/formate.css
@@ -281,6 +281,7 @@ div .ui-dialog-content table { background: #040e1e; }
   width: 60px;
 
   margin-right: 2px;
+  margin-bottom: 2px;
 
   font-size: 100%;
 }
