--- a/skins/xnova/formate.css
+++ b/skins/xnova/formate.css
@@ -61,28 +61,28 @@ th
   text-align   : center;
 }
 
-td.c, th.c_l, th.c_r, th.c_c, tr.c_l th, tr.c_r th, tr.c_c th
+th.c_l, th.c_r, th.c_c, tr.c_l th, tr.c_r th, tr.c_c th, td.c
 {
   font-weight          : bold;
   background-image     : url(img/bg1.gif);
 }
-
+/*
 th, td.c_l, td.c_r, td.c_c, tr.c_l td, tr.c_r td, tr.c_c td
 {
   text-align           : center;
 }
-
-th.c_c, td.c_c, .cell_center, tr.c_c td, tr.c_c th, tr.cell_center td, tr.cell_center th
+*/
+.c_c, th.c_c, td.c_c, tr.c_c td, tr.c_c th, .cell_center, tr.cell_center td, tr.cell_center th
 {
   text-align: center;
 }
 
-th.c_l, td.c_l, td.c, .cell_left, tr.c_l td, tr.c_l th, tr.cell_left td, tr.cell_left th
+.c_l, th.c_l, td.c_l, tr.c_l td, tr.c_l th, .cell_left, tr.cell_left td, tr.cell_left th, td.c
 {
   text-align: left;
 }
 
-th.c_r, td.c_r, .cell_right, tr.c_r td, tr.c_r th, tr.cell_right td, tr.cell_right th
+.c_r, th.c_r, td.c_r, tr.c_r td, tr.c_r th, .cell_right, tr.cell_right td, tr.cell_right th
 {
   text-align: right;
 }
