feat-INT-29d21: Reworked Research interface

--- a/skins/EpicBlue/default.css
+++ b/skins/EpicBlue/default.css
@@ -234,7 +234,7 @@
 }
 
 /* Message & numbers color coding */
-.success, .positive {
+.ok, .success, .positive {
   color: lime;
 }
 
@@ -250,7 +250,7 @@
   color: red;
 }
 
-.success_bg, .positive_bg {
+.ok_bg, .success_bg, .positive_bg {
   background-color: darkgreen;
 }
 
