--- a/skins/supernova-ivash/formate.css
+++ b/skins/supernova-ivash/formate.css
@@ -122,7 +122,7 @@ a
 
 a:hover
 {
-  color                : #F9C749;
+  color                : #80605D;
   text-decoration      : underline;
 }
 
@@ -148,7 +148,7 @@ a:hover
 
 .style div a:hover
 {
-  background-color     : #B68304;
+  background-color     : #415680;
   text-decoration      : none;
 }
 
