--- a/skins/supernova-ivash/formate.css
+++ b/skins/supernova-ivash/formate.css
@@ -69,7 +69,7 @@ th, td, input, select, textarea
 th.c_l, th.c_r, th.c_c, tr.c_l th, tr.c_r th, tr.c_c th, td.c
 {
   font-weight          : bold;
-  background-image     : url(img/bg1.jpg);
+  background-image     : url(img/bg1.gif);
 }
 /*
 th, td.c_l, td.c_c, tr.c_l td, tr.c_r td, tr.c_c td
@@ -96,7 +96,7 @@ td.l
 {
   vertical-align       : top;
   padding              : 3px;
-  background-image     : url(img/bg2.jpg);
+  background-image     : url(img/bg2.gif);
 }
 
 table table
@@ -195,7 +195,7 @@ h1
 
 #left_menu th {
   color: #63698c;
-  background-image: url(img/bg1.jpg);
+  background-image: url(img/bg1.gif);
   background-color: #212c42;
   text-align: center;
 }
