feat-UNI: System display now has player's ally rank title in player popup (if player in alliance)

--- a/skins/EpicBlue/formate.css
+++ b/skins/EpicBlue/formate.css
@@ -316,6 +316,29 @@ div .ui-dialog-content table { background: #344055; }
   font-size: 100%;
 }
 
+.casino_roulette
+{
+  position: relative;
+
+  width: 687px;
+  height: 186px;
+}
+
+.casino_point
+{
+  cursor: pointer;
+
+  /*border: 3px solid #344566;*/
+
+  position: absolute;
+  height: 15px;
+  width: 15px;
+
+  background-image: url(../../images/casino_point.png);
+
+  font-size: 100%;
+}
+
 /* Pseudoelement to use colors from CSS in JS */
 #style_probe
 {
