--- a/skins/EpicBlue/formate.css
+++ b/skins/EpicBlue/formate.css
@@ -66,6 +66,11 @@ th, td, input, select, textarea
   font-weight          : bold;
 }
 
+td.error_message
+{
+  background-color     : #40557E;
+}
+
 th.c_l, th.c_r, th.c_c, tr.c_l th, tr.c_r th, tr.c_c th, td.c
 {
   font-weight          : bold;
