--- a/design/css/global.css
+++ b/design/css/global.css
@@ -16,6 +16,16 @@ input.button
   padding-bottom: 1px;
 }
 
+@media screen
+{
+  input.frameles
+  {
+    border               : #ff0000;
+    text-align           : center;
+    font-size            : 11px;
+  }
+}
+
 ul /* Unmarked list */
 {
   margin: 0;
@@ -145,4 +155,30 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
 #copyright
 {
   text-align: center;
+}
+
+#page_body
+{
+  margin-left: 150px;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: auto;
+}
+
+#sn_navbar
+{
+/*  padding-left: 150px;*/
+}
+
+#sn_menu {
+  float:left;
+  width: 130px;
+/*  text-align: center;*/
+  padding-left:5px;
+  padding-right:5px;
+}
+
+#resources
+{
+  margin: auto;
 }
