--- a/design/templates/OpenGame/planet_resources.tpl.html
+++ b/design/templates/OpenGame/planet_resources.tpl.html
@@ -1,29 +1,42 @@
     <!-- planet_resources BOF -->
-    <tr class="c_l"><th>{L_sys_resources}</th><th>{L_sys_fleet_and}</th><th>{L_tech_storage}</th><th>{L_tech_storage_max}</th></tr>
+    <tr class="c_l">
+      <th>{L_sys_resources}</th>
+      <th class="c_l">{L_sys_metal}</th>
+      <th class="c_l">{L_sys_crystal}</th>
+      <th class="c_l">{L_sys_deuterium}</th>
+      <th class="c_l"<!-- IF ! SN_NAVBAR_HIDE_FLEETS --> colspan="2"<!-- ENDIF -->>{L_sys_energy}</th>
+    </tr>
+
     <tr>
-      <td class="c_l">{L_sys_metal}</td>
-      <td class="c_r">{PLANET_METAL_FLEET_TEXT}</td>
+      <th>{L_tech_storage}</th>
       <td class="c_r" id='top_metal'>{PLANET_METAL_TEXT}</td>
-      <td class="c_r">{PLANET_METAL_MAX_TEXT}</td>
-    </tr>
-
-    <tr>
-      <td class="c_l">{L_sys_crystal}</td>
-      <td class="c_r">{PLANET_CRYSTAL_FLEET_TEXT}</td>
       <td class="c_r" id='top_crystal'>{PLANET_CRYSTAL_TEXT}</td>
-      <td class="c_r">{PLANET_CRYSTAL_MAX_TEXT}</td>
-    </tr>
-
-    <tr>
-      <td class="c_l">{L_sys_deuterium}</td>
-      <td class="c_r">{PLANET_DEUTERIUM_FLEET_TEXT}</td>
       <td class="c_r" id='top_deuterium'>{PLANET_DEUTERIUM_TEXT}</td>
-      <td class="c_r">{PLANET_DEUTERIUM_MAX_TEXT}</td>
+      <td class="c_r">{ENERGY_BALANCE}</td>
     </tr>
 
     <tr>
-      <td class="c_l" colspan="2">{L_sys_energy}</td>
-      <td class="c_r">{ENERGY_BALANCE}</td>
+      <th>{L_tech_storage_max}</th>
+      <td class="c_r">{PLANET_METAL_MAX_TEXT}</td>
+      <td class="c_r">{PLANET_CRYSTAL_MAX_TEXT}</td>
+      <td class="c_r">{PLANET_DEUTERIUM_MAX_TEXT}</td>
       <td class="c_r">{ENERGY_MAX}</td>
     </tr>
+
+    <!-- IF ! SN_NAVBAR_HIDE_FLEETS -->
+    <tr>
+      <th>{L_sys_fleet_and}</th>
+      <td class="c_r">{PLANET_METAL_FLEET_TEXT}</td>
+      <td class="c_r">{PLANET_CRYSTAL_FLEET_TEXT}</td>
+      <td class="c_r">{PLANET_DEUTERIUM_FLEET_TEXT}</td>
+      <td>-</td>
+    </tr>
+    <!-- ENDIF -->
+
+<script LANGUAGE='JavaScript'><!--
+  sn_timers.unshift({id: 'top_metal', type: 1, active: true, start_time: {TIME_NOW}, options: {start_value: {PLANET_METAL}, per_second: {PLANET_METAL_PERHOUR} / 3600, max_value: {PLANET_METAL_MAX}, round: {RESOURCE_ROUNDING}}});
+  sn_timers.unshift({id: 'top_crystal', type: 1, active: true, start_time: {TIME_NOW}, options: {start_value: {PLANET_CRYSTAL}, per_second: {PLANET_CRYSTAL_PERHOUR} / 3600, max_value: {PLANET_CRYSTAL_MAX}, round: {RESOURCE_ROUNDING}}});
+  sn_timers.unshift({id: 'top_deuterium', type: 1, active: true, start_time: {TIME_NOW}, options: {start_value: {PLANET_DEUTERIUM}, per_second: {PLANET_DEUTERIUM_PERHOUR} / 3600, max_value: {PLANET_DEUTERIUM_MAX}, round: {RESOURCE_ROUNDING}}});
+// --></script>
+
     <!-- planet_resources EOF -->
