--- a/design/templates/OpenGame/admin/settings.tpl.html
+++ b/design/templates/OpenGame/admin/settings.tpl.html
@@ -22,10 +22,11 @@
             function()
             {
               // send requests
-              jQuery.post("ajax_version_check.php", {ajax: 1},
+              jQuery.post("ajax_version_check.php", {mode: {D_SNC_MODE_VERSION_CHECK}, ajax: 1},
                 function(data)
                 {
                   // output result
+//                  $("#version_check_result").html(data);return;
                   data = !data ? {D_SNC_VER_ERROR_CONNECT} : (isNaN(data) || lang[data] == undefined ? {D_SNC_VER_ERROR_SERVER} : data);
                   $("#version_check_result").html(lang[data]);
                 }
@@ -43,6 +44,44 @@
       <td class="c_l" colspan="2">
         <input name="server_updater_check_auto" id="server_updater_check_auto" type="checkbox" value="1"<!-- IF SERVER_UPDATE_CHECK_AUTO --> checked<!-- ENDIF -->/>&nbsp;<label for="server_updater_check_auto">{L_adm_opt_ver_check_auto}</label><br />
         <div style="width: 670px">{L_adm_opt_ver_check_auto_hint}</div>
+      </td>
+    </tr>
+
+    <tr><th class="c_l" colspan="2">{L_adm_upd_register}</th></tr>
+    <tr>
+      <td class="c_c" colspan="2">
+        <!-- IF SERVER_UPDATE_KEY -->
+          <div class="c_l"  id="register_result" style="width: 670px">
+            {L_adm_upd_register_already}<br />
+            {L_adm_upd_register_id}&nbsp;<span class="ok">{C_server_updater_id}</span><br />
+            {L_adm_upd_register_key}&nbsp;<span class="ok">{C_server_updater_key}</span>
+          </div>
+        <!-- ELSE -->
+          <div class="c_l" style="width: 670px">{L_adm_upd_register_hint}</div>
+
+          <div class="c_c" id="register_result" style="width: 670px">
+            <input type="button" value="{LA_adm_upd_register_do}" id="server_update_register"><br />
+            {L_adm_opt_ver_response[D_SNC_VER_REGISTER_UNREGISTERED]}
+          </div>
+
+          <script type="text/javascript">
+            jQuery("#server_update_register").click(
+              function()
+              {
+                // send requests
+                jQuery.post("ajax_version_check.php", {ajax: 1, mode: {D_SNC_MODE_REGISTER}, url: '{SN_ROOT_VIRTUAL}'},
+                  function(data)
+                  {
+                    // output result
+//                    $("#register_result").html(data);return;
+                    data = !data ? {D_SNC_VER_ERROR_CONNECT} : (isNaN(data) || lang[data] == undefined ? {D_SNC_VER_ERROR_SERVER} : data);
+                    $("#register_result").html(lang[data]);
+                  }
+                );
+              }
+            );
+          </script>
+        <!-- ENDIF -->
       </td>
     </tr>
 
