--- a/design/templates/OpenGame/server_info.tpl.html
+++ b/design/templates/OpenGame/server_info.tpl.html
@@ -28,11 +28,11 @@
   </tr>
   <tr>
     <th>{L_adm_opt_speed} {L_adm_opt_game_gspeed}</th>
-    <th>x&nbsp;{game_speed}</th>
+    <th>x&nbsp;{C_game_speed}</th>
   </tr>
   <tr>
     <th>{L_adm_opt_speed} {L_adm_opt_game_fspeed}</th>
-    <th>x&nbsp;{fleet_speed}</th>
+    <th>x&nbsp;{C_fleet_speed}</th>
   </tr>
   <tr>
     <th>{L_adm_opt_speed} {L_adm_opt_game_pspeed}</th>
@@ -161,7 +161,7 @@
   <tr><td class="c" colspan="2">{L_adm_ver_versions}</td></tr>
   <tr>
     <th>{L_adm_ver_version_sn}</th>
-    <th>{SN_VERSION}</th>
+    <th>{D_SN_VERSION}</th>
   </tr>
   <tr>
     <th>{L_adm_ver_version_db}</th>
