--- a/design/templates/OpenGame/market_trader.tpl.html
+++ b/design/templates/OpenGame/market_trader.tpl.html
@@ -113,7 +113,7 @@ jQuery(document).ready(
 
 {message}
 
-<form name="form_trade" action="market.php?mode={D_MARKET_RESOURCES}" method="POST">
+<form name="form_trade" method="POST">
   <table>
     <tr class="c_l">
       <th>{L_sys_resources}</th>
