feat-SYS-33c0: Project SuperNova.WS Release 33 RC

--- a/design/templates/OpenGame/affilates.tpl.html
+++ b/design/templates/OpenGame/affilates.tpl.html
@@ -2,7 +2,8 @@
 <table width="519">
   <tr><td class="c">{L_aff_title}</td></tr>
   <tr><th>
-    {L_aff_text1} {C_rpg_bonus_divisor} {L_aff_text2}
+    {L_aff_text1} {C_rpg_bonus_divisor} {L_aff_text2}<br />
+    <span class="notice">{L_aff_text3} {C_rpg_bonus_minimum} {L_sys_dark_matter_sh}</span>
   </th></tr>
   <tr><th>
     <h2>{L_aff_link}</h2>
