--- a/design/templates/OpenGame/server_info.tpl.html
+++ b/design/templates/OpenGame/server_info.tpl.html
@@ -113,10 +113,10 @@
 
 
   <tr><td class="c" colspan="2">{L_adm_opt_game_oth_info}</td></tr>
-  <!-- IF ALI_MEMBERS_BONUS -->
+  <!-- IF ALI_BONUS_MEMBERS -->
   <tr>
     <th>{L_sys_ali_members_bonus}</th> 
-    <th>{ALI_MEMBERS_BONUS}</th>
+    <th>{ALI_BONUS_MEMBERS}</th>
   </tr>
   <!-- ENDIF -->
   <tr>
