--- a/design/templates/OpenGame/stat_alliancetable.tpl.html
+++ b/design/templates/OpenGame/stat_alliancetable.tpl.html
@@ -1,9 +1,9 @@
 <tr>
-	<th>{ally_rank}</th>
-	<th>{ally_rankplus}</th>
+	<th align="right"><span class="fl">{ally_rank_selected}</span><a name="{ally_rank}">{ally_rank}</a></th>
+	<th align="right">{ally_rankplus}</th>
 	<th><a href="alliance.php?mode=ainfo&a={ally_id}" target='_ally'>{ally_name}</a></th>
 	<th>{ally_mes}</th>
-	<th>{ally_members}</th>
-	<th>{ally_points}</th>
-	<th>{ally_members_points}</th>
+	<th align="right">{ally_members}</th>
+	<th align="right">{ally_points}</th>
+	<th align="right">{ally_members_points}</th>
 </tr>
