--- a/design/templates/OpenGame/stat_playertable.tpl.html
+++ b/design/templates/OpenGame/stat_playertable.tpl.html
@@ -1,6 +1,6 @@
 <tr>
-	<th align="center">{player_rank}</th>
-	<th align="center">{player_rankplus}</th>
+	<th align="right"><span class="fl">{player_rank_selected}</span><a name="{player_rank}">{player_rank}</a></th>
+	<th align="right">{player_rankplus}</th>
 	<th align="left">{player_name}</th>
 	<th align="center">{player_mes}</th>
 	<th align="left">{player_alliance}</th>
