--- a/design/templates/OpenGame/login_body.tpl.html
+++ b/design/templates/OpenGame/login_body.tpl.html
@@ -5,24 +5,13 @@
 <div id="log_skipper"></div>
 <div id="log_main">
   <div id="log_title">{L_sys_supernova}: {L_sys_universe} "{C_game_name}"</div>
-  <div id="log_status">
-    <font color="red">{C_game_maxGalaxy}</font> {L_adm_opt_galaxies} - <font color="red">{C_game_maxSystem}</font> {L_adm_opt_systems} - <font color="red">{C_game_maxPlanet}</font> {L_adm_opt_planets}
-  </div>
-  <div id="log_status">
-    {L_adm_opt_speed}:
-    {L_adm_opt_game_gspeed} <font color="red">x{C_game_speed}</font> -
-    {L_adm_opt_game_fspeed} <font color="red">x{C_fleet_speed}</font> -
-    {L_adm_opt_game_pspeed} <font color="red">x{C_resource_multiplier}</font>
-  </div>
+
+  <!-- INCLUDE login_header -->
 
   <div id="log_description">{L_log_desc}</div>
 
   <div id="log_register" onclick="document.location.href='./reg.php{LANG}{referral}';">
     {L_log_reg_main}
-  </div>
-
-  <div id="log_status">
-    {L_log_online}: <font color="red">{online_users}</font> - {L_log_lastreg}: <font color="red">{last_user}</font> - {L_log_numbreg}: <font color="red">{C_users_amount}</font><br>
   </div>
 
   <div id="log_form">
