--- a/design/templates/OpenGame/registry_form.tpl.html
+++ b/design/templates/OpenGame/registry_form.tpl.html
@@ -6,6 +6,9 @@
 
 <div id="log_main">
   <div id="log_title">{L_log_reg} - {L_sys_universe} "{C_game_name}"</div>
+
+  <!-- INCLUDE login_header -->
+
   <div id="log_description">{L_log_reg_text0} <!-- IF URL_RULES --><a href="{URL_RULES}" style="color: red; text-decoration: underline; font-face: bold;"><!-- ENDIF -->{L_reg_with_rules}<!-- IF URL_RULES --></a><!-- ENDIF -->. {L_log_reg_text1}</div>
 
   <form name="registerForm" method="POST" action="reg.php{LANG}{referral}" onsubmit="changeAction('register');" >
