feat-SYS-34a0: Compensation patch for server with enabled 'Magic Quotes'

--- a/design/templates/OpenGame/fleet2.tpl.html
+++ b/design/templates/OpenGame/fleet2.tpl.html
@@ -70,7 +70,7 @@ var fleet_slide_changing = false;
     <!-- BEGIN resources -->
       <tr>
         <td class="c_l">{resources.NAME}</td>
-        <td class="c_r">{resources.ON_PLANET}</td>
+        <td class="c_r">{resources.TEXT}</td>
         <td class="c_c">
           <script type="text/javascript"><!--
             sn_ainput_make('resource{resources.ID}', {max: Math.min({resources.ON_PLANET}, {fleet_capacity}), step: 1000});
